apps/seaweedfs/httproute-master.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  name: seaweedfs-master
  namespace: seaweedfs
spec:
  hostnames:
    - seaweedfs-master.whyredfire.dev
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: seaweedfs-all-in-one
          port: 9333
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
